--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 h1{
     color: rgb(92, 122, 156);
     text-align: center;
+    background-color: rgb(13, 218, 115);
+    
 }
 
 
@@ -8,11 +10,14 @@ h2{
     font-style: italic;
     text-align: center;
     color: rgb(17, 117, 50);
+    background-color: black;
 }
 p{
     font-family: sans-serif;
+    color: yellowgreen ;
 }
 ul{
     font-size: 20px;
     line-height: 30px;
+    color: rgb(28, 19, 163);
 }
