--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,11 @@ h1{
     width: 200px;
     height: 250px;
 }
+.important-note{
+    font-style: italic;
+    color: black;
+}
+
 h2{
     font-style: italic;
     text-align: center;
